# shin

./: .gitignore  Cargo.toml  HISTORY.md  LICENSE  README.md  pyproject.toml  requirements-test.txt  setup.py
.github/workflows/: CI.yml  test.yml
python/shin/: __init__.py  shin.pyi
shin/: __init__.py
src/: lib.rs
tests/: test_shin.py
typesafety/: test_shin.yml
